# NeurEvo

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/agents/gym/: gymcraft.py
examples/torch/auto_encoder/: 01 CNN AE MNIST.ipynb  02 CNN VAE MNIST.ipynb  02a CNN beta-VAE MNIST.ipynb  03 CNN MDN-VAE MNIST.ipynb  03 CNN MDN-VAE MNIST.py  04 CNN VaCo-AE MNIST.ipynb  1D-CNN-helper.ipynb
examples/train/: discrete_ca.py
examples/util/: non_blocking_plot.py  plot.py
mindcraft/: __init__.py  agent.py  environment.py  reference_frame.py  script.py  world.py
mindcraft/agents/: __init__.py  keyboard_agent.py  random_agent.py  sensory_neuron_agent.py  torch_agent.py
mindcraft/envs/: __init__.py  gym_wrapper.py
mindcraft/io/: __init__.py  log.py  repr.py
mindcraft/io/spaces/: __init__.py  box.py  wrapper.py
mindcraft/rfs/: __init__.py  embedding_prediction.py  inactive_loss.py  variance_loss.py
mindcraft/torch/: __init__.py  activation.py  util.py
mindcraft/torch/layer/: __init__.py  gene_regulatory_network.py  stack_recurrent_neural_network.py
mindcraft/torch/module/: __init__.py  auto_encoder.py  complexify.py  convolution.py  convolution_transpose.py  embedding.py  ensemble.py  feed_forward.py  gaussian_process.py  mixture_density_network.py  neat_wiring.py  patchwork.py  projection.py  recurrent.py  set_transformer.py  variance_covariance_embedding.py
mindcraft/torch/wrapper/: __init__.py
mindcraft/train/: __init__.py  compose.py  es_method.py  es_util.py  neat_method.py  neat_util.py
mindcraft/util/: __init__.py  geometric.py  hpc.py  mpi.py  precision.py  prob.py  tensor.py  text.py  time.py  types.py
tests/: test_mpi4py.py
tests/mindcraft_test/: test_agent.py  test_environment.py  test_mindcraft.py  test_reference_frame.py  test_world.py
(+52 files in other folders)
